# hatch-monorepo

./: README.md  pyproject.toml
hatch_monorepo/: hooks.py  plugin.py
